--- a/Server/package.json
+++ b/Server/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.7.4",
     "nodemon": "^3.1.7",
     "typescript": "^5.6.2"
