--- a/MEAN-Client/angular.json
+++ b/MEAN-Client/angular.json
@@ -36,7 +36,9 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/flowbite/dist/flowbite.css"
             ],
             "scripts": []
           },
@@ -90,9 +92,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "@angular/material/prebuilt-themes/azure-blue.css"
-            ],
+            "styles": ["@angular/material/prebuilt-themes/azure-blue.css"],
             "scripts": []
           }
         }
