--- a/MEAN-Client/package.json
+++ b/MEAN-Client/package.json
@@ -24,6 +24,7 @@
     "@ckeditor/ckeditor5-build-classic": "^43.2.0",
     "@tinymce/tinymce-angular": "^8.0.1",
     "flowbite": "^2.5.2",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
